@@ -220,7 +220,7 @@ public class ScreenRenderer {
                 context.put("https", https);
             }
         }
-        context.put("javaScriptEnabled", new Boolean(UtilHttp.isJavaScriptEnabled(request)));
+        context.put("javaScriptEnabled", Boolean.valueOf(UtilHttp.isJavaScriptEnabled(request)));
 
         // these ones are FreeMarker specific and will only work in FTL templates, mainly here for backward compatibility
         BeansWrapper wrapper = BeansWrapper.getDefaultInstance();
